# otel-flask-demo

./: .gitignore  Dockerfile  LICENSE  app.py  docker-compose.yaml  pyproject.toml
