[tool.poetry]
name = "pwong"
version = "0.1.0"
description = ""
authors = ["Lance T. Erickson <lancetarn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
requests = "^2.28.1"
opentelemetry-distro = "^0.36b0"
opentelemetry-instrumentation-flask = "^0.36b0"
opentelemetry-exporter-otlp = "^1.15.0"
opentelemetry-instrumentation-urllib = "^0.36b0"
opentelemetry-instrumentation-requests = "^0.36b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
